--- a/estilo.css
+++ b/estilo.css
@@ -1,4 +1,18 @@
 #sigma {
     margin-right: 10px;
-    margin-left: -100px;
+    margin-left: 30px;
+}
+
+.box {
+    display: flex;
+    align-items: stretch;
+}
+
+#side {
+    margin-left: -3px;
+    margin-top: -25px;
+}
+
+#pag {
+    margin-left: -10px;
 }
