--- a/estilo.css
+++ b/estilo.css
@@ -1,6 +1,6 @@
 #sigma {
     margin-right: 10px;
-    margin-left: 30px;
+    margin-left: 180px;
 }
 
 .box {
@@ -9,10 +9,27 @@
 }
 
 #side {
+    padding-right: 5px;
     margin-left: -3px;
-    margin-top: -25px;
+    margin-top: -120px;
+    position: fixed;
+    background-color: white;
 }
 
 #pag {
-    margin-left: -10px;
+    margin-left: 227px;
+    border-left: 1px solid gainsboro;
 }
+
+#down {
+    width: -moz-max-content;
+    width: 1000px;
+}
+
+#ex {
+    text-decoration: underline;
+}
+
+#form {
+    padding: 15px;
+} 
